done with internal styling of cards; have stopgap solution for card grid, but doesn't look quite as it should

--- a/themes/achp/sass/features/_latest_news.scss
+++ b/themes/achp/sass/features/_latest_news.scss
@@ -14,15 +14,11 @@ $card-width: 300px;
 
       .news_item {
         &_date {
-          color: $color-lightgrey;
-          margin-top: 15px;
+          @extend .card_date;
         }
 
         &_body p {
-          text-align: left;
-          font-family: $serif-text;
-          margin-top: 10px;
-          color: $color-grey;
+          @extend .card_body;
         }
 
         &_link {
